--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,3 +1,4 @@
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -5,32 +6,148 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="assign3.weather.MainActivity$PlaceholderFragment">
-    <LinearLayout
-        android:layout_width="fill_parent"
+
+    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/temp_and_icon"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:columnCount="2"
         android:orientation="horizontal"
-        android:id="@+id/temp_and_icon">
-<ImageView
-    android:layout_width="80dp"
-    android:layout_height="80dp"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:id="@+id/weather_icon"/>
-        <TextView
+        >
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/temp"
-            android:textSize="40sp"
-            android:textStyle="bold"
-            android:layout_gravity="center_vertical"
-            android:paddingStart="@dimen/activity_horizontal_margin"/>
-    </LinearLayout>
-    <TextView android:id="@+id/section_label"
+            android:orientation="vertical"
+            android:paddingBottom="10dp"
+            >
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:id="@+id/weather_icon"/>
+            <TextView android:id="@+id/section_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:layout_gravity="center_horizontal"
+                android:layout_below="@+id/temp_and_icon"
+                />
+        </LinearLayout>
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
-        android:textSize="20sp"
-        android:paddingStart="@dimen/activity_horizontal_margin"
-        android:layout_below="@+id/temp_and_icon"
-        />
+        android:id="@+id/temp"
+        android:textSize="40sp"
+        android:text="gegeg"
+        android:layout_gravity="center"
+
+       />
+        </GridLayout>
+
+        <View
+            android:layout_below="@+id/temp_and_icon"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
+        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/details_grid"
+            android:layout_below="@+id/temp_and_icon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:columnCount="2"
+            android:orientation="horizontal"
+            >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:textSize="15sp"
+            android:text="Pressure:"
+            android:layout_gravity="right"
+            />
+        <TextView android:id="@+id/pressure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:textSize="15sp"
+            android:layout_gravity="center_horizontal"
+            android:text="gege"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="Humidity:"
+            android:layout_gravity="right"
+            />
+        <TextView android:id="@+id/humidity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:layout_gravity="center_horizontal"
+            android:text="gege"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="Wind Speed:"
+            android:layout_gravity="right"
+            />
+        <TextView android:id="@+id/wind_speed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:layout_gravity="center_horizontal"
+            android:text="gege"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="Sunrise:"
+            android:layout_gravity="right"
+            />
+        <TextView android:id="@+id/sunrise"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:layout_gravity="center_horizontal"
+            android:text="gege"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="Sunset:"
+            android:layout_gravity="right"
+            />
+        <TextView android:id="@+id/sunset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:layout_gravity="center_horizontal"
+            android:text="gege"
+            />
+</GridLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_below="@id/details_grid"
+        android:background="@drawable/layout_bg"
+        android:layout_marginTop="20dp">
+        <com.db.chart.view.LineChartView
+            xmlns:chart="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/linechart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp"
+            />
+    </LinearLayout>
+
+
 
 </RelativeLayout>
