--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -23,6 +28,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
+
     <android.support.v4.view.ViewPager android:id="@+id/container"
         android:layout_width="match_parent" android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
@@ -33,3 +39,15 @@
         android:src="@android:drawable/ic_dialog_email" />-->
 
 </android.support.design.widget.CoordinatorLayout>
+<ListView
+ android:id="@+id/left_drawer"
+ android:layout_width="240dp"
+  android:layout_height="match_parent"
+
+    android:layout_gravity="start"
+    android:choiceMode="singleChoice"
+    android:divider="@android:color/darker_gray"
+    android:dividerHeight="1dp"
+    android:background="@color/drawerBackgrond"
+    />
+    </android.support.v4.widget.DrawerLayout>
