--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,10 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="CustomTheme" parent="android:Theme.Black">
+        <item name="android:textColor">#ffffff</item>
     </style>
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -13,5 +17,20 @@
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
+    <style name="ProgressDialogTheme" parent="@android:style/Theme.Holo.Light.Panel">
+        <item name="android:alertDialogStyle">@style/CustomAlertDialogStyle</item>
+        <item name="android:textColorPrimary">#000000</item>
+    </style>
+    <style name="CustomAlertDialogStyle">
+        <item name="android:bottomBright">@color/drawerBackgrond</item>
+        <item name="android:bottomDark">@color/drawerBackgrond</item>
+        <item name="android:bottomMedium">@color/drawerBackgrond</item>
+        <item name="android:centerBright">@color/drawerBackgrond</item>
+        <item name="android:centerDark">@color/drawerBackgrond</item>
+        <item name="android:centerMedium">@color/drawerBackgrond</item>
+        <item name="android:fullBright">@color/drawerBackgrond</item>
+        <item name="android:fullDark">@color/drawerBackgrond</item>
+        <item name="android:topBright">@color/drawerBackgrond</item>
+        <item name="android:topDark">@color/drawerBackgrond</item>
+    </style>
 </resources>
