--- a/app/src/main/res/layout/twleve_day_fragment.xml
+++ b/app/src/main/res/layout/twleve_day_fragment.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/left_drawer"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:background="@drawable/night">
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/forecast_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:layout_gravity="start"
+    android:layout_marginTop="20dp"
+android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
     android:choiceMode="singleChoice"
-    android:divider="@android:color/darker_gray"
+    android:divider="@color/white"
     android:dividerHeight="1dp"
-    android:background="@android:color/background_light"
+    android:background="@drawable/layout_bg"
     />
+</RelativeLayout>
