--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#78909C</color>
-    <color name="colorPrimaryDark">#00b49e</color>
+    <color name="colorPrimaryDark">#6e838e</color>
     <color name="colorAccent">#D6D790</color>
     <color name="white">#e6e6e8</color>
     <color name="drawerBackgrond">#CC647A82</color>
