--- a/app/src/main/res/layout/twleve_day_fragment.xml
+++ b/app/src/main/res/layout/twleve_day_fragment.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="@drawable/night">
+    android:id="@+id/background_tab_two"
+   >
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/forecast_list"
     android:layout_width="match_parent"
