--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,13 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:id="@+id/background_tab_one"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="assign3.weather.MainActivity$PlaceholderFragment"
 
     >
@@ -18,7 +22,8 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_grid"
-       android:orientation="vertical">
+       android:orientation="vertical"
+       android:layout_weight="2">
        <assign3.weather.customViews.DejaVUSansTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
@@ -55,6 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/details_grid"
+        android:layout_weight="1"
         android:id="@+id/calendar"
         android:layout_marginTop="5dp"
         android:paddingTop="17dp"
@@ -71,5 +77,6 @@
 
 
 
-</RelativeLayout>
+</LinearLayout>
+    </ScrollView>
 </android.support.v4.widget.SwipeRefreshLayout>
