--- a/app/src/main/res/layout/twleve_day_fragment.xml
+++ b/app/src/main/res/layout/twleve_day_fragment.xml
@@ -4,16 +4,24 @@
     android:layout_width="match_parent"
     android:id="@+id/background_tab_two"
    >
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="10dp">
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/forecast_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="20dp"
-android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
+
     android:choiceMode="singleChoice"
     android:divider="@color/white"
     android:dividerHeight="1dp"
     android:background="@drawable/layout_bg"
     />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
